--- a/Blogpost.html
+++ b/Blogpost.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id= "post">
+            <h1>Este es el títuo atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a crear cosas increibels con las ramas</p>
+        </div>
+    </div>
+    
+    
 </body>
 </html>
