--- a/Blogpost.html
+++ b/Blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id= "post">
             <h1>Este es el títuo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a crear cosas increibels con las ramas</p>
