--- a/Blogpost.html
+++ b/Blogpost.html
@@ -12,6 +12,7 @@
         <div id= "post">
             <h1>Este es el títuo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a crear cosas increibels con las ramas</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, dolore eligendi, debitis illum dolores quia dolor quam ullam itaque, nulla unde. Vero qui quae consectetur, in explicabo fuga fugit odio, distinctio beatae, suscipit quisquam ducimus rerum expedita nihil consequuntur.</p>
         </div>
     </div>
     
