--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog 2.
+            Hyperblog222222
             <span id="tagline">Tu blog</span>
         </div>
         <div id= "post">
